fix(auth): prevent vts permission leakage for ais users and fix accessible tree routing